--- a/Cargo.toml
+++ b/Cargo.toml
@@ -116,6 +116,9 @@ members = [
   "lib/vector-vrl/tests",
   "lib/vector-vrl/web-playground",
   "vdev",
+  "src/sources/http_client",
+  "src/sources/http_server",
+  "src/sources/util",
 ]
 
 [workspace.dependencies]
@@ -134,6 +137,8 @@ tracing-limit = { path = "lib/tracing-limit" }
 vector-lib = { path = "lib/vector-lib", default-features = false, features = ["vrl"] }
 vector-vrl-functions = { path = "lib/vector-vrl/functions" }
 loki-logproto = { path = "lib/loki-logproto", optional = true }
+
+sources-http-client = { path = "src/sources/http_client", optional = true }
 
 # Tokio / Futures
 async-stream = { version = "0.3.5", default-features = false }
@@ -523,7 +528,7 @@ sources-fluent = ["dep:base64", "sources-utils-net-tcp", "tokio-util/net", "dep:
 sources-gcp_pubsub = ["gcp", "dep:h2", "dep:prost-types", "protobuf-build", "dep:tonic"]
 sources-heroku_logs = ["sources-utils-http", "sources-utils-http-query", "sources-http_server"]
 sources-host_metrics =  ["heim/cpu", "heim/host", "heim/memory", "heim/net"]
-sources-http_client = ["sources-utils-http-client"]
+sources-http_client = ["dep:sources-http-client", "sources-utils-http-client"]
 sources-http_server = ["sources-utils-http", "sources-utils-http-query"]
 sources-internal_logs = []
 sources-internal_metrics = []
