--- a/Cargo.toml
+++ b/Cargo.toml
@@ -116,6 +116,9 @@ members = [
   "lib/vector-vrl/tests",
   "lib/vector-vrl/web-playground",
   "vdev",
+  "src/transforms/remap",
+  "src/config-lib",
+  "src/serde-util",
 ]
 
 [workspace.dependencies]
@@ -134,6 +137,9 @@ tracing-limit = { path = "lib/tracing-limit" }
 vector-lib = { path = "lib/vector-lib", default-features = false, features = ["vrl"] }
 vector-vrl-functions = { path = "lib/vector-vrl/functions" }
 loki-logproto = { path = "lib/loki-logproto", optional = true }
+transforms-remap = { path = "src/transforms/remap", optional = true }
+config-lib = { path = "src/config-lib", optional = true }
+serde-util = { path = "src/serde-util", optional = true }
 
 # Tokio / Futures
 async-stream = { version = "0.3.5", default-features = false }
@@ -597,7 +603,7 @@ transforms-lua = ["dep:mlua", "vector-lib/lua"]
 transforms-metric_to_log = []
 transforms-pipelines = ["transforms-filter", "transforms-route"]
 transforms-reduce = []
-transforms-remap = []
+transforms-remap = ["dep:transforms-remap", "dep:config-lib", "dep:serde-util"]
 transforms-route = []
 transforms-sample = []
 transforms-tag_cardinality_limit = ["dep:bloomy", "dep:hashbrown"]
