--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,6 +122,7 @@ members = [
   "src/serde-util",
   "src/http-util",
   "src/conditions-lib",
+  "src/template-lib",
   # transforms
   "src/transforms/remap",
   "src/transforms/aggregate",
@@ -129,6 +130,7 @@ members = [
   "src/transforms/dedupe",
   "src/transforms/filter",
   "src/transforms/route",
+  "src/transforms/throttle",
 ]
 
 [workspace.dependencies]
@@ -153,8 +155,10 @@ transforms-aws_ec2_metadata = { path = "src/transforms/aws_ec2_metadata", option
 transforms-dedupe = { path = "src/transforms/dedupe", optional = true }
 transforms-filter = { path = "src/transforms/filter", optional = true }
 transforms-route = { path = "src/transforms/route", optional = true }
+transforms-throttle= { path = "src/transforms/throttle", optional = true }
 config-lib = { path = "src/config-lib", optional = true }
 conditions-lib = { path = "src/conditions-lib", optional = true }
+template-lib = { path = "src/template-lib", optional = true }
 http-util = { path = "src/http-util", optional = true }
 serde-util = { path = "src/serde-util", optional = true }
 
@@ -627,7 +631,7 @@ transforms-remap = ["dep:transforms-remap", "dep:config-lib", "dep:serde-util"]
 transforms-route = ["dep:transforms-route", "dep:config-lib", "dep:serde-util", "dep:conditions-lib"]
 transforms-sample = []
 transforms-tag_cardinality_limit = ["dep:bloomy", "dep:hashbrown"]
-transforms-throttle = ["dep:governor"]
+transforms-throttle = ["dep:governor", "dep:transforms-throttle", "dep:conditions-lib", "dep:config-lib", "dep:template-lib"]
 
 # Sinks
 sinks = ["sinks-logs", "sinks-metrics"]
