--- a/Cargo.toml
+++ b/Cargo.toml
@@ -312,8 +312,8 @@ hostname = { version = "0.4.0", default-features = false }
 http = { version = "0.2.9", default-features = false }
 http-serde = "1.1.3"
 http-body = { version = "0.4.5", default-features = false }
-hyper = { version = "0.14.28", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream"] }
-hyper-openssl = { version = "0.9.2", default-features = false }
+hyper = { version = "0.14.28", default-features = false, features = ["client", "runtime", "http1", "http2", "server", "stream", "tcp"] }
+hyper-openssl = { version = "0.9.2", default-features = false, features = ["tcp"] }
 hyper-proxy = { version = "0.9.1", default-features = false, features = ["openssl-tls"] }
 indexmap.workspace = true
 indoc = { version = "2.0.5", default-features = false }
